# Project_DBMS

./: gitignore  readme.md
backend_dbms/: .gitignore  Cargo.toml
backend_dbms/auth-frontend/: package-lock.json  package.json
backend_dbms/auth-frontend/src/: App.js
backend_dbms/auth-frontend/src/components/: AdminControlPanel.css  AdminControlPanel.js  Archive.js  Fixtures.js  Footer.js  Home.js  Login.js  Match.js  MatchFixtures.css  Navbar.js  Playing11.js  Register.js  Standings.js  Stats.js  Venue.js  Welcome.js  arc_match.js
backend_dbms/auth-frontend/src/services/: api.js
backend_dbms/auth-frontend/src/styles/: AdminControlPanel.css  Archive.css  Home.css  Login.css  MatchFixtures.css  Navbar.css  Playing11.css  Register.css  Standings.css  Venue.css  home.css  match.css
backend_dbms/src/: main.rs
backend_dbms/src/auth/: jwt.rs  login.rs  register.rs
backend_dbms/src/view/: archive.rs  fixtures.rs  match_data.rs  mod.rs  player.rs  points_table.rs  stats.rs  teams.rs  venue.rs
backend_dbms/websocket/: .env  Cargo.toml
backend_dbms/websocket/src/: db.rs  main.rs  websocket.rs  wst.rs
