[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
tokio-postgres = "0.7.10"
ws = "0.9.2"
serde_json = "1.0.107"
serde = "1.0.188"
serde_derive = "1.0.188"
jsonwebtoken = "8.3.0"
chrono = "0.4.31"